--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ title_separator          : "-"
 name                     : &name "Michael Rose" # &name is a YAML anchor which can be *referenced later
 description              : &description "Exploring the complexity of Modern Collaborative and Goal Oriented Processes."
 url                      : https://utelemaco.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/untacit" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/" # the subpath of your site, e.g. "/blog"
 repository               : "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
@@ -82,7 +82,7 @@ naver_site_verification  :
 twitter:
   username               : &twitter "mmistakes"
 facebook:
-  username               : &facebook "michaelrose"
+  username               : &facebook "untacit"
   app_id                 :
   publisher              :
 og_image                 : "/assets/images/site-logo.png" # Open Graph/Twitter default site image
@@ -93,7 +93,7 @@ social:
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
     - "https://twitter.com/mmistakes"
-    - "https://facebook.com/michaelrose"
+    - "https://facebook.com/untacit"
 
 # Analytics
 analytics:
@@ -105,23 +105,20 @@ analytics:
 
 # Site Author
 author:
-  name             : *name # *name is a YAML reference pointing to the &anchor earlier
-  avatar           : "/assets/images/michael-rose.jpg"
-  bio              : "Just another boring, tattooed, time traveling, designer."
-  location         : "Buffalo, NY"
+  name             : "Untacit Team" # *name is a YAML reference pointing to the &anchor earlier
+  avatar           : "http://placehold.it/350x250"
+  #bio              : "Just another boring, tattooed, time traveling, designer."
+  location         : "Waterloo, CA"
   links:
-    - label: "Made Mistakes"
-      icon: "fas fa-fw fa-link"
-      url: "https://mademistakes.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/mmistakes"
+      url: "https://twitter.com/untacit"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/mmistakes"
+      url: "https://github.com/untacit"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/mmistakes"
+      url: "https://instagram.com/untacit"
 
 
 # Site Footer
