--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Welcome to the"
+title                    : "Welcome to Untacit"
 title_separator          : "-"
 name                     : &name "Untacit Team" # &name is a YAML anchor which can be *referenced later
 # description              : &description "Exploring the complexity of Modern Collaborative and Goal Oriented Processes."
